Fix buttons visibility

--- a/src/components/common/GalleryProduct/GalleryProduct.module.scss
+++ b/src/components/common/GalleryProduct/GalleryProduct.module.scss
@@ -18,6 +18,7 @@
     > * {
       margin-top: 5px;
       margin-left: 5px;
+      background-color: $button-bcg;
     }
   }
 
