--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -142,6 +142,7 @@ $slider-btn-hover: $orange;
 $promo-button: $green;
 
 //GALLERY PRODUCT
+$button-bcg: $white;
 $label-bcg: $white;
 $label-corner: $dark-5;
 $label-shadow: $light-5;
